--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "howler": "^2.2.4",
     "three": "^0.181.1"
   },
   "devDependencies": {
+    "@types/howler": "^2.2.12",
     "@types/three": "^0.181.0",
     "typescript": "^5.9.3",
     "vite": "^7.2.0"
