--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "devDependencies": {
     "@types/howler": "^2.2.12",
     "@types/three": "^0.181.0",
+    "dotenv": "^17.3.1",
     "pg": "^8.18.0",
     "typescript": "^5.9.3",
-    "vite": "^7.2.0"
+    "vite": "^7.2.0",
+    "vitest": "^4.0.18"
   }
 }
