--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "tsc --noEmit && vite build",
     "preview": "vite preview",
-    "lint": "tsc --noEmit"
+    "lint": "tsc --noEmit",
+    "test": "vitest run",
+    "purge": "node --experimental-strip-types scripts/purge-bogus-times.ts"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.97.0",
