--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,5 @@
     "allowImportingTsExtensions": true,
     "types": ["vite/client"]
   },
-  "include": ["src"]
+  "include": ["src", "test"]
 }
